[tool.poetry]
name = "github"
version = "0.1.0"
description = "A project for managing GitHub resources with Pulumi."
authors = ["Edoardo Rosa <6991986+notdodo@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
keywords = ["pulumi", "github", "cloud", "infrastructure-as-code"]
repository = "https://github.com/notdodo/github"
homepage = "https://github.com/notdodo/github"
documentation = "https://github.com/notdodo/github/blob/main/README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pulumi = "^3.150.0"
pulumi-github = "^6.6.0"

[tool.poetry.group.dev.dependencies]
mypy = { extras = ["faster-cache"], version = "^1.15.0" }
pydantic = "^2.11.3"
pylint = "^3.3.6"
ruff = "^0.11.4"

[tool.ruff]
output-format = "github"

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = ["ALL"]
ignore = ["D2", "D4", "ANN", "COM812", "ISC001", "ERA001"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
case-sensitive = true

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pycodestyle]
max-line-length = 150

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
pretty = true
show_error_codes = true
show_error_context = true
implicit_reexport = true
namespace_packages = true

[tool.pylint."MESSAGES CONTROL"]
persistent = "no"
disable = ["fixme", "line-too-long"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
